src/component/snapshots/xjtu_mealflow__component__input__test__render-2.snap
---
source: src/component/input.rs
expression: terminal.backend()
---
"╭Input Test────────────────────────────╮"
"│ab                                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
