src/component/snapshots/xjtu_mealflow__component__input__test__render.snap
---
source: src/component/input.rs
expression: terminal.backend()
---
"╭Input Test────────────────────────────╮"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰──────────────────────────────────────╯"
